# xplinter

./: .gitignore  README.md  TODO.md  pyproject.toml  sample.xml  setup.py
examples/publications/: helper_module.py  publications.py  publications.xplinter
examples/publications/sources/: 100001.xml  100002.xml  100003.xml  100004.xml
examples/wos/: config.yaml.example  finalize.sql  helper_module.py  main.py  wos.py  wos.xplinter
tests/: company.py  company.xplinter  company_data.xml
xplinter/: __init__.py  driver.py  record_generator.py  xplinter.lark  xplinter.py
xplinter/drivers/: __init__.py  csv.py  csv_driver.py  driver.py  pgsql.py
