[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xplinter"
version = "0.0.0"
authors = [
  { name="Yohai Meiron", email="yohai.meiron@scinet.utoronto.ca" },
]
description = "An easy-to-use XML shredder"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
